[tool.poetry]
name = "memestate"
version = "0.1.0"
description = ""
authors = ["thrzl. <thrizzle@skiff.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
hypercorn = "^0.14.3"
cachetools = "^5.3.0"
ormsgpack = "^1.2.4"
aiohttp = "^3.8.3"
fastapi-utils = "^0.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.237"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
